03.chirpstack_v3/kubernetes/06.chirpstack-v3-ns-as-create-attach-pvc__Pod.yaml

---

apiVersion: v1
kind: Pod
metadata:
  name: "attach-pvc-chirpstack-v3"
  namespace: chirpstack-v3
  labels: 
    app: attach-pvc-chirpstack-v3
spec:
  volumes:
  - name: attach-volume-chirpstack-v3
    persistentVolumeClaim:
      claimName: oci-fss-pvc-postgresql-claim0-chirpstack-v3
  containers:
  - name: attach-volume-chirpstack-v3
    image: alpine:latest
    command: ["/bin/sh", "-c", "sleep infinity"]   
    volumeMounts:
    - name: attach-volume-chirpstack-v3
      mountPath: docker-entrypoint-initdb.d
