03.chirpstack_v3/kubernetes/11.chirpstack-v3-ns-postgresql__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v3-ns-postgresql-deployment
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-ns-postgresql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v3-ns-postgresql-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chirpstack-v3-ns-postgresql-deployment
    spec:
      securityContext:
        runAsUser: 999       # postgres UID
        runAsGroup: 999      # postgres GID
        fsGroup: 999         # garante acesso ao PVC em NFS
      containers:
        - name: chirpstack-v3-ns-postgresql
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-socket-dir
              mountPath: /var/run/postgresql
            - name: configmap-init-ns
              mountPath: /docker-entrypoint-initdb.d
            - name: oci-fss-pvc-postgresql-data-chirpstack-v3-ns
              mountPath: /var/lib/postgresql/data
              subPath: chirpstack-v3-ns
          imagePullPolicy: Always
      volumes:
        - name: pg-socket-dir
          emptyDir: {}
        - name: configmap-init-ns
          configMap:
            name: chirpstack-v3-postgresql-config-map
            defaultMode: 0755
        - name: oci-fss-pvc-postgresql-data-chirpstack-v3-ns
          persistentVolumeClaim:
            claimName: oci-fss-pvc-postgresql-data-chirpstack-v3-ns
      restartPolicy: Always
