03.chirpstack_v3/kubernetes/13.chirpstack-v3-as-postgresql__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v3-as-postgresql-deployment
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-as-postgresql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v3-as-postgresql-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chirpstack-v3-as-postgresql-deployment
    spec:
      securityContext:
        runAsUser: 999       # postgres UID
        runAsGroup: 999      # postgres GID
        fsGroup: 999         # garante acesso ao PVC em NFS
      containers:
        - name: chirpstack-v3-as-postgresql
          image: postgres:14-alpine
          args: ["postgres", "-p", "5433"]
          ports:
            - containerPort: 5433
          volumeMounts:
            - name: pg-socket-dir
              mountPath: /var/run/postgresql
            - name: configmap-init-as
              mountPath: /docker-entrypoint-initdb.d
            - name: oci-fss-pvc-postgresql-data-chirpstack-v3-as
              mountPath: /var/lib/postgresql/data
              subPath: chirpstack-v3-as
          imagePullPolicy: Always
      volumes:
        - name: pg-socket-dir
          emptyDir: {}   # socket isolado por pod
        - name: configmap-init-as
          configMap:
            name: chirpstack-v3-postgresql-config-map
            defaultMode: 0755
            items:
              - key: 002.init-chirpstack-v3_as.sh
                path: 002.init-chirpstack-v3_as.sh
              - key: 003.chirpstack-v3_as_trgm.sh
                path: 003.chirpstack-v3_as_trgm.sh
              - key: 004.chirpstack-v3_as_hstore.sh
                path: 004.chirpstack-v3_as_hstore.sh
        - name: oci-fss-pvc-postgresql-data-chirpstack-v3-as
          persistentVolumeClaim:
            claimName: oci-fss-pvc-postgresql-data-chirpstack-v3-as
      restartPolicy: Always
