03.chirpstack_v3/kubernetes/16.chirpstack-v3-redis__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v3-redis-deployment
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v3-redis-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chirpstack-v3-redis-deployment
    spec:
      securityContext:
        runAsUser: 1001       # UID do processo Redis
        runAsGroup: 1001      # GID do processo Redis
        fsGroup: 1001         # garante acesso ao PVC em NFS
      containers:
        - name: chirpstack-v3-redis
          image: redis:7.2
          ports:
            - containerPort: 6379
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          command: ["redis-server"]
          args: ["--dir", "/data", "--appendonly", "yes"]
          volumeMounts:
            - name: oci-fss-pvc-redis-data-chirpstack-v3
              mountPath: /data
          imagePullPolicy: Always
      volumes:
        - name: oci-fss-pvc-redis-data-chirpstack-v3
          persistentVolumeClaim:
            claimName: oci-fss-pvc-redis-data-chirpstack-v3
      restartPolicy: Always
