03.chirpstack_v3/kubernetes/22.chirpstack-v3-network-server__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chirpstack-v3-network-server-deployment
  name: chirpstack-v3-network-server-deployment
  namespace: chirpstack-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v3-network-server-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: chirpstack-v3-network-server-deployment
    spec:
      containers:
        - name: chirpstack-v3-network-server
          image: chirpstack/chirpstack-network-server:3.16.8
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: chirpstack-v3-network-server-config
              mountPath: /etc/chirpstack-network-server/chirpstack-network-server.toml
              subPath: chirpstack-network-server.toml
          imagePullPolicy: Always
      volumes:
        - name: chirpstack-v3-network-server-config
          configMap:
            name: chirpstack-v3-network-server-config-map
      restartPolicy: "Always" # Unsupported value: "unless-stopped": supported values: "Always", "OnFailure", "Never".
status: {}
