03.chirpstack_v3/kubernetes/27.chirpstack-v3-application-server__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v3-application-server-deployment
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-application-server-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: chirpstack-v3-application-server-deployment
  template:
    metadata:
      labels:
        app: chirpstack-v3-application-server-deployment
    spec:
      containers:
        - name: chirpstack-v3-application-server-deployment
          image: chirpstack/chirpstack-application-server:3.17.9
          ports:
            - name: http-port
              containerPort: 8001
            - name: join-port
              containerPort: 8003
            - name: ui-port
              containerPort: 8080
            - name: monitoring-port
              containerPort: 8101
          # resources:
          #  limits:
          #    cpu: "1"
          #    memory: 1500Mi
          #  requests:
          #    cpu: "1"
          #    memory: 750Mi
          volumeMounts:
            - name: chirpstack-v3-application-server-config
              mountPath: /etc/chirpstack-application-server/chirpstack-application-server.toml
              subPath: chirpstack-application-server.toml
          imagePullPolicy: Always
      volumes:
        - name: chirpstack-v3-application-server-config
          configMap:
            name: chirpstack-v3-application-server-config-map
      restartPolicy: "Always" # Unsupported value: "unless-stopped": supported values: "Always", "OnFailure", "Never".
status: {}
