03.chirpstack_v3/kubernetes/04.chirpstack-v3-mosquitto__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v3-mosquitto-service
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-mosquitto-service
spec:
  selector:
    app: chirpstack-v3-mosquitto-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
  - name: "1883-to-1888"
    protocol: TCP
    port: 1888
    targetPort: 1883
