03.chirpstack_v3/kubernetes/12.chirpstack-v3-ns-postgresql__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v3-ns-postgresql-service
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-ns-postgresql-service
spec:
  selector:
    app: chirpstack-v3-ns-postgresql-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "5432-to-5437"
      protocol: TCP
      port: 5437
      targetPort: 5432
