03.chirpstack_v3/kubernetes/17.chirpstack-v3-redis__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v3-redis-service
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-redis-service
spec:
  selector:
    app: chirpstack-v3-redis-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "6379-to-6385"
      protocol: TCP
      port: 6384
      targetPort: 6379
