03.chirpstack_v3/kubernetes/20.chirpstack-v3-gateway-bridge__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v3-gateway-bridge-service
  namespace: chirpstack-v3
  labels:
    app: chirpstack-v3-gateway-bridge-service
spec:
  selector:
    app: chirpstack-v3-gateway-bridge-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "1700-to-1700"
      protocol: UDP
      port: 1700
      targetPort: 1700
