03.chirpstack_v3/kubernetes/28.chirpstack-v3-application-server__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v3-application-server-service
  namespace: chirpstack-v3
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8101"
  labels:
    app: chirpstack-v3-application-server-service
spec:
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "http-port" # "8001-to-8001"
      protocol: TCP
      port: 8001
      targetPort: 8001
      # nodePort: 31001
    - name: "join-port" # "8003-to-8003"
      protocol: TCP
      port: 8003
      targetPort: 8003
      # nodePort: 31003
    - name: "ui-port" # "8080-to-443"
      protocol: TCP
      port: 443
      targetPort: 8080
      # nodePort: 31443
    - name: "monitoring-port" # "8101-to-8101"
      protocol: TCP
      port: 8101
      targetPort: 8101
      # nodePort: 31101
  selector:
    app: chirpstack-v3-application-server-deployment
